--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,8 @@
   background-size: contain; }
 
 html {
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  overflow: hidden; }
 
 body {
   font-family: Montserrat;
@@ -457,7 +458,7 @@ a {
 #accueil {
   position: fixed;
   width: 100vw;
-  min-height: 116vh;
+  min-height: 120vh;
   font-size: 11vw;
   font-weight: 700;
   font-family: Axis;
@@ -467,9 +468,16 @@ a {
   z-index: 10;
   margin-top: -8vh; }
 
+#fondBlanc {
+  width: 100vw;
+  height: 200vh;
+  background-color: white;
+  position: absolute;
+  top: -8vh; }
+
 #accueil h1 {
   position: absolute;
-  top: 40%;
+  top: 40vh;
   display: inline-block;
   color: #34A2FF;
   transition: opacity 0.5s, margin 0.5s, color 0.5s, transform 0.5s;
@@ -1016,7 +1024,7 @@ a {
 #bodyPaiementRetour {
   position: absolute;
   z-index: 1;
-  top: 150px;
+  top: 190px;
   left: 7.5%;
   color: #32D096;
   text-shadow: none;
@@ -1038,7 +1046,7 @@ a {
   position: relative;
   z-index: 10;
   width: 85%;
-  padding: 12vw 0 40px 0;
+  padding: 120px 0 40px 0;
   margin: 0 auto;
   display: grid;
   grid-gap: 50px;
@@ -1282,4 +1290,5 @@ a {
     margin: 0 auto;
     display: grid;
     grid-gap: 50px;
+    padding: 12vw 0 40px 0;
     grid-template-areas: "infos hebergement" "services  finalisation"; } }
