--- a/scss/layout/pagePaiement.scss
+++ b/scss/layout/pagePaiement.scss
@@ -25,7 +25,7 @@
 #bodyPaiementRetour {
     position: absolute;
     z-index: 1;
-    top: 150px;
+    top: 190px;
     left: 7.5%;
     color: $color_turquoise;
     text-shadow: none;
@@ -53,7 +53,7 @@
     position: relative;
     z-index: 10;
     width: 85%;
-    padding: 12vw 0 40px 0;
+    padding: 120px 0 40px 0;
     margin: 0 auto;
     display: grid;
     grid-gap: 50px;
@@ -435,6 +435,7 @@
         margin: 0 auto;
         display: grid;
         grid-gap: 50px;
+    padding: 12vw 0 40px 0;
 
         grid-template-areas: "infos hebergement"
             "services  finalisation";
