--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,5 +18,6 @@
 @import "layout/pageListeDestinations";
 @import "layout/pageDestination"; 
 @import "layout/pagePaiement"; 
+@import "layout/pageConfirmation"; 
 
 
