--- a/css/main.css
+++ b/css/main.css
@@ -92,11 +92,17 @@ a {
   #logo img:hover {
     filter: grayscale(100%); }
 
+.turquoise {
+  color: #32D096; }
+
 .fade-enter-active,
 .fade-leave-active {
   transition-duration: 0.2s;
   transition-property: opacity;
   transition-timing-function: ease; }
+
+.fade-enter-active {
+  transition-delay: 0.2s; }
 
 .fade-enter,
 .fade-leave-active {
@@ -289,7 +295,7 @@ a {
   flex-direction: column;
   justify-content: space-between;
   top: 0px;
-  transition: transform 0.25s, opacity 0.25s, box-shadow 0.25s, top 0.25s;
+  transition: transform 0.7s, opacity 0.25s, box-shadow 0.25s, top 0.25s;
   transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1); }
 
 .destiInfo {
@@ -395,7 +401,9 @@ a {
 
 @media screen and (min-width: 1080px) {
   .destination {
-    width: 27vw; } }
+    width: 27vw; }
+    .destination:hover {
+      top: -7px; } }
 
 #section_options .toggle {
   position: relative;
@@ -889,7 +897,8 @@ a {
 #suivant p {
   margin-bottom: 10px;
   margin-right: 3px;
-  font-weight: 600; }
+  font-weight: 600;
+  padding-top: 10px; }
 
 #activites > div > div {
   width: 25px;
@@ -1293,33 +1302,32 @@ a {
     padding: 12vw 0 40px 0;
     grid-template-areas: "infos hebergement" "services  finalisation"; } }
 
-#bodyConfirmation {
-  max-width: 100vw;
-  min-height: 100vh;
-  position: relative;
-  vertical-align: middle;
-  background-color: white; }
+#confPrenom,
+#confNom {
+  display: inline-block; }
 
-#lieu_background {
-  position: absolute;
-  z-index: 0;
-  top: 0;
-  left: -4vw;
-  font-size: 15vw;
+#section_optionsConf p {
+  display: flex;
+  align-items: center;
+  padding-right: 3px; }
+  #section_optionsConf p i {
+    color: #32D096;
+    padding-bottom: 3px; }
+
+#titreConfirmation {
+  font-size: 20px;
   font-weight: 800;
-  color: #eee;
-  text-transform: uppercase;
-  width: 300vw;
-  transition: opacity 0.5s, transform 0.5s;
-  opacity: 0;
-  transform: translateY(-5vw); }
+  text-align: center;
+  margin: 0 auto;
+  margin: 50px;
+  color: #333; }
 
 #bodyConfirmationRetour {
-  position: absolute;
-  z-index: 1000;
-  top: 190px;
-  left: 7.5%;
-  color: #32D096;
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 25px;
+  color: #34A2FF;
   text-shadow: none;
   font-weight: 600;
   font-size: 14px;
@@ -1327,261 +1335,257 @@ a {
   opacity: 0;
   transform: translateX(30px); }
 
-#bodyPaiement #logo {
-  position: relative;
-  z-index: 1;
-  width: 150px;
-  transition: opacity 0.5s, transform 0.5s;
-  opacity: 0;
-  transform: translateY(30px); }
-
-#main_paiement {
-  position: relative;
-  z-index: 10;
-  width: 85%;
-  padding: 120px 0 40px 0;
-  margin: 0 auto;
-  display: grid;
-  grid-gap: 50px;
-  grid-template-areas: "infos" "hebergement" "services" "finalisation"; }
-
-#main_paiement section {
-  width: 100%;
-  transition: opacity 0.5s, transform 0.5s;
-  opacity: 0;
-  transform: translateY(-60px); }
-
-#main_paiement section:nth-child(1) {
-  grid-area: infos; }
-
-#main_paiement section:nth-child(2) {
-  grid-area: hebergement; }
-
-#main_paiement section:nth-child(3) {
-  grid-area: services; }
-
-#main_paiement section:nth-child(4) {
-  grid-area: finalisation; }
-
-#main_paiement h1 {
-  border-bottom: 1px solid #eee;
-  font-size: 21px;
-  font-weight: 800;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
-  color: #333; }
-
-#main_paiement input[type=text] {
-  outline: none;
-  width: 100%;
-  padding: 6px 15px 10px 15px;
-  box-sizing: border-box;
-  border: none;
-  border-bottom: 2px solid #D9D9D9;
-  background-color: #FAFAFA;
-  transition: border-bottom 0.2s; }
-  #main_paiement input[type=text]:focus {
-    border-bottom: 2px solid #34A2FF; }
-  #main_paiement input[type=text]::placeholder {
-    font-style: italic;
-    color: #C4C4C4;
-    font-size: 12px;
-    font-family: Montserrat; }
-
-#main_paiement label {
-  font-size: 10px;
-  font-weight: 600;
-  color: #34A2FF;
-  padding-left: 15px; }
-
-#main_paiement form p {
-  background-color: #FAFAFA;
-  padding-top: 10px;
+#section_facturation h2 {
   margin-bottom: 15px; }
 
-#section_hebergement > div {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 20px; }
-
-#section_hebergement > div > div {
-  cursor: pointer; }
-
-.hebergement_img {
-  height: 230px;
-  width: 100%;
-  background-position: center;
-  background-size: cover;
-  transition: box-shadow 0.2s; }
-
-#suite .hebergement_img {
-  background-image: url("../images/hebergements/suite.jpg");
-  box-shadow: inset 0 -5px 0 #32D096; }
-
-#lodge .hebergement_img {
-  background-image: url("../images/hebergements/lodge.jpg");
-  box-shadow: inset 0 0px 0 #32D096; }
-
-#villa .hebergement_img {
-  background-image: url("../images/hebergements/villa.jpg");
-  box-shadow: inset 0 0px 0 #32D096; }
-
-#suite:hover > .hebergement_img,
-#lodge:hover > .hebergement_img,
-#villa:hover > .hebergement_img {
-  box-shadow: inset 0 -5px 0 #32D096 !important; }
-
-#section_hebergement h3 {
-  padding-top: 12px;
-  padding-bottom: 3px;
-  font-weight: 700;
-  font-size: 17px; }
-
-#section_hebergement p {
-  padding-bottom: 15px;
+.confSpan {
+  margin-bottom: 15px;
   font-weight: 600;
-  font-size: 13px;
-  color: #34A2FF; }
-
-#section_options {
-  display: grid; }
-  #section_options p {
-    padding: 0; }
-
-#section_options > div {
-  height: 60px;
-  margin: 4px 0;
-  display: flex;
-  align-items: center; }
-
-.options_icon {
-  width: 4vw;
-  height: 4vw;
-  min-width: 30px;
-  min-height: 30px;
-  max-width: 60px;
-  max-height: 60px;
-  background-size: 60%;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#options_icon_01 {
-  background-image: url("../images/icons/options/option_01.png"); }
-
-#options_icon_02 {
-  background-image: url("../images/icons/options/option_02.png"); }
-
-#options_icon_03 {
-  background-image: url("../images/icons/options/option_03.png"); }
-
-#options_icon_04 {
-  background-image: url("../images/icons/options/option_04.png"); }
-
-.options_texte {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin-left: 20px;
-  width: 60%; }
-
-.options_texte h3 {
-  padding-bottom: 4px;
-  padding-top: 0px;
-  font-size: 15px;
-  color: #444;
-  font-weight: 600; }
-
-.options_texte p {
-  font-size: 13px;
-  color: #34A2FF;
-  font-weight: 600;
-  background-color: white; }
-
-.leToggle {
-  width: 20%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end; }
-
-#section_finalisation input[type=text]:focus {
-  border-bottom: 2px solid #32D096; }
-
-#section_finalisation label {
-  color: #32D096; }
-
-#section_finalisation #total {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  font-weight: 600;
-  width: 100%; }
-  #section_finalisation #total p {
-    color: #999;
-    font-size: 11px; }
-  #section_finalisation #total h4 {
-    border-radius: 2px;
-    border: 1px solid #32D096;
-    color: #32D096;
-    background-color: #EEFFF9;
-    padding: 13px 20px;
-    width: 70%;
-    font-size: 18px;
-    text-align: center; }
-  #section_finalisation #total > div:first-child {
-    display: flex; }
-    #section_finalisation #total > div:first-child p:first-child {
-      margin-right: 10px;
-      color: #32D096;
-      font-size: 13px;
-      margin-bottom: 5px; }
-
-#section_finalisation > div:last-child {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start; }
-
-#section_finalisation .bouton {
-  margin: 0;
-  margin-top: 20px;
-  padding: 14px 18px !important;
-  font-size: 15px;
-  font-weight: 600; }
-
-#section_finalisation .bouton i {
-  font-size: 15px;
-  display: inline-block;
-  padding-left: 15px; }
+  color: #444; }
 
 @media screen and (min-width: 800px) {
-  #section_hebergement > div {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px; }
-  #section_finalisation #total > div:first-child {
-    display: flex; }
-    #section_finalisation #total > div:first-child p:first-child {
-      margin-right: 10px;
-      color: #32D096;
-      font-size: 13px;
-      margin-bottom: 5px; }
-  #section_finalisation > div:last-child {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end; }
-  #section_finalisation .bouton {
-    margin: 0px; } }
-
-@media screen and (min-width: 1080px) {
-  #bodyPaiementRetour {
-    top: 60px; }
-  #main_paiement {
-    width: 85%;
+  #titreConfirmation {
+    font-size: 30px;
+    font-weight: 800;
+    text-align: center;
     margin: 0 auto;
-    display: grid;
-    grid-gap: 50px;
-    padding: 12vw 0 40px 0;
-    grid-template-areas: "infos hebergement" "services  finalisation"; } }
+    margin-top: 70px; } }
+
+.check_mark {
+  width: 80px;
+  height: 130px;
+  margin: 0 auto;
+  margin-top: 90px;
+  margin-bottom: -100px; }
+
+button {
+  cursor: pointer;
+  margin-left: 15px; }
+
+.hide {
+  display: none; }
+
+.sa-icon {
+  width: 80px;
+  height: 80px;
+  border: 4px solid gray;
+  -webkit-border-radius: 40px;
+  border-radius: 40px;
+  border-radius: 50%;
+  margin: 20px auto;
+  padding: 0;
+  position: relative;
+  box-sizing: content-box; }
+
+.sa-icon.sa-success {
+  border-color: #4CAF50; }
+
+.sa-icon.sa-success::before, .sa-icon.sa-success::after {
+  content: '';
+  -webkit-border-radius: 40px;
+  border-radius: 40px;
+  border-radius: 50%;
+  position: absolute;
+  width: 60px;
+  height: 120px;
+  background: white;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+.sa-icon.sa-success::before {
+  -webkit-border-radius: 120px 0 0 120px;
+  border-radius: 120px 0 0 120px;
+  top: -7px;
+  left: -33px;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform-origin: 60px 60px;
+  transform-origin: 60px 60px; }
+
+.sa-icon.sa-success::after {
+  -webkit-border-radius: 0 120px 120px 0;
+  border-radius: 0 120px 120px 0;
+  top: -11px;
+  left: 30px;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform-origin: 0px 60px;
+  transform-origin: 0px 60px; }
+
+.sa-icon.sa-success .sa-placeholder {
+  width: 80px;
+  height: 80px;
+  border: 4px solid rgba(76, 175, 80, 0.5);
+  -webkit-border-radius: 40px;
+  border-radius: 40px;
+  border-radius: 50%;
+  box-sizing: content-box;
+  position: absolute;
+  left: -4px;
+  top: -4px;
+  z-index: 2; }
+
+.sa-icon.sa-success .sa-fix {
+  width: 5px;
+  height: 90px;
+  background-color: white;
+  position: absolute;
+  left: 28px;
+  top: 8px;
+  z-index: 1;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
+
+.sa-icon.sa-success.animate::after {
+  -webkit-animation: rotatePlaceholder 4.25s ease-in;
+  animation: rotatePlaceholder 4.25s ease-in;
+  animation-delay: 1.5s; }
+
+.sa-icon.sa-success {
+  border-color: transparent\9; }
+
+.sa-icon.sa-success .sa-line.sa-tip {
+  -ms-transform: rotate(45deg) \9; }
+
+.sa-icon.sa-success .sa-line.sa-long {
+  -ms-transform: rotate(-45deg) \9; }
+
+.animateSuccessTip {
+  -webkit-animation: animateSuccessTip 0.75s;
+  animation: animateSuccessTip 0.75s;
+  animation-delay: 1.5s; }
+
+.animateSuccessLong {
+  -webkit-animation: animateSuccessLong 0.75s;
+  animation: animateSuccessLong 0.75s;
+  animation-delay: 1.5s; }
+
+@-webkit-keyframes animateSuccessLong {
+  0% {
+    width: 0;
+    right: 46px;
+    top: 54px; }
+  65% {
+    width: 0;
+    right: 46px;
+    top: 54px; }
+  84% {
+    width: 55px;
+    right: 0px;
+    top: 35px; }
+  100% {
+    width: 47px;
+    right: 8px;
+    top: 38px; } }
+
+@-webkit-keyframes animateSuccessTip {
+  0% {
+    width: 0;
+    left: 1px;
+    top: 19px; }
+  54% {
+    width: 0;
+    left: 1px;
+    top: 19px; }
+  70% {
+    width: 50px;
+    left: -8px;
+    top: 37px; }
+  84% {
+    width: 17px;
+    left: 21px;
+    top: 48px; }
+  100% {
+    width: 25px;
+    left: 14px;
+    top: 45px; } }
+
+@keyframes animateSuccessTip {
+  0% {
+    width: 0;
+    left: 1px;
+    top: 19px; }
+  54% {
+    width: 0;
+    left: 1px;
+    top: 19px; }
+  70% {
+    width: 50px;
+    left: -8px;
+    top: 37px; }
+  84% {
+    width: 17px;
+    left: 21px;
+    top: 48px; }
+  100% {
+    width: 25px;
+    left: 14px;
+    top: 45px; } }
+
+@keyframes animateSuccessLong {
+  0% {
+    width: 0;
+    right: 46px;
+    top: 54px; }
+  65% {
+    width: 0;
+    right: 46px;
+    top: 54px; }
+  84% {
+    width: 55px;
+    right: 0px;
+    top: 35px; }
+  100% {
+    width: 47px;
+    right: 8px;
+    top: 38px; } }
+
+.sa-icon.sa-success .sa-line {
+  height: 5px;
+  background-color: #4CAF50;
+  display: block;
+  border-radius: 2px;
+  position: absolute;
+  z-index: 2; }
+
+.sa-icon.sa-success .sa-line.sa-tip {
+  width: 25px;
+  left: 14px;
+  top: 46px;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+.sa-icon.sa-success .sa-line.sa-long {
+  width: 47px;
+  right: 8px;
+  top: 38px;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
+
+@-webkit-keyframes rotatePlaceholder {
+  0% {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg); }
+  5% {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg); }
+  12% {
+    transform: rotate(-405deg);
+    -webkit-transform: rotate(-405deg); }
+  100% {
+    transform: rotate(-405deg);
+    -webkit-transform: rotate(-405deg); } }
+
+@keyframes rotatePlaceholder {
+  0% {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg); }
+  5% {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg); }
+  12% {
+    transform: rotate(-405deg);
+    -webkit-transform: rotate(-405deg); }
+  100% {
+    transform: rotate(-405deg);
+    -webkit-transform: rotate(-405deg); } }
