--- a/scss/layout/pageConfirmation.scss
+++ b/scss/layout/pageConfirmation.scss
@@ -1,33 +1,37 @@
-#bodyConfirmation {
-    max-width: 100vw;
-    min-height: 100vh;
-    position: relative;
-    vertical-align: middle;
-    background-color: white;
+#confPrenom,
+#confNom {
+    display: inline-block;
+}
+
+#section_optionsConf p {
+    display: flex;
+    align-items: center;
+	padding-right: 3px;
+
+    i {
+        color: $color_turquoise;
+        padding-bottom: 3px;
+    }
 
 }
 
-#lieu_background {
-    position: absolute;
-    z-index: 0;
-    top: 0;
-    left: -4vw;
-    font-size: 15vw;
-    font-weight: 800;
-    color: #eee;
-    text-transform: uppercase;
-    width: 300vw;
-    transition: opacity 0.5s, transform 0.5s;
-    opacity: 0;
-    transform: translateY(-5vw);
+
+#titreConfirmation {
+	font-size: 20px;
+	font-weight: 800;
+	text-align: center;
+	margin: 0 auto;
+
+	margin: 50px;
+  color: #333;
 }
 
 #bodyConfirmationRetour {
-    position: absolute;
-    z-index: 1000;
-    top: 190px;
-    left: 7.5%;
-    color: $color_turquoise;
+	width: 100%;
+	text-align: center;
+    margin: 0 auto;
+    margin-top: 25px;
+    color: $color_bleu2;
     text-shadow: none;
     font-weight: 600;
     font-size: 14px;
@@ -36,409 +40,314 @@
     transform: translateX(30px);
 }
 
-#bodyPaiement #logo {
-    position: relative;
-    z-index: 1;
-    width: 150px;
-    transition: opacity 0.5s, transform 0.5s;
-    opacity: 0;
-    transform: translateY(30px);
+#section_facturation {
+	h2{
+		margin-bottom: 15px;
+	}
 }
 
 
-// ================================
-// CONTENU DE LA PAGE
-// ================================
-#main_paiement {
-    position: relative;
-    z-index: 10;
-    width: 85%;
-    padding: 120px 0 40px 0;
-    margin: 0 auto;
-    display: grid;
-    grid-gap: 50px;
-
-    grid-template-areas: "infos"
-        "hebergement"
-        "services"
-        "finalisation";
+.confSpan {
+	margin-bottom: 15px;
+	font-weight: 600;
+	color: #444;
 }
-
-
-
-#main_paiement {
-
-
-    section {
-        width: 100%;
-        transition: opacity 0.5s, transform 0.5s;
-        opacity: 0;
-        transform: translateY(-60px);
-    }
-
-    section:nth-child(1) {
-        grid-area: infos;
-    }
-
-    section:nth-child(2) {
-        grid-area: hebergement;
-    }
-
-    section:nth-child(3) {
-        grid-area: services;
-    }
-
-    section:nth-child(4) {
-        grid-area: finalisation;
-    }
-
-
-    h1 {
-        border-bottom: 1px solid #eee;
-        font-size: 21px;
-        font-weight: 800;
-        padding-bottom: 10px;
-        margin-bottom: 10px;
-        color: #333;
-    }
-
-
-    input[type=text] {
-        outline: none;
-        width: 100%;
-        padding: 6px 15px 10px 15px;
-        box-sizing: border-box;
-        border: none;
-        border-bottom: 2px solid #D9D9D9;
-        background-color: #FAFAFA;
-        transition: border-bottom 0.2s;
-
-        &:focus {
-            border-bottom: 2px solid $color_bleu2;
-        }
-
-        &::placeholder {
-            font-style: italic;
-            color: #C4C4C4;
-            font-size: 12px;
-            font-family: Montserrat;
-        }
-    }
-
-    label {
-        font-size: 10px;
-        font-weight: 600;
-        color: $color_bleu2;
-        padding-left: 15px;
-    }
-
-    form p {
-        background-color: #FAFAFA;
-        padding-top: 10px;
-        margin-bottom: 15px;
-    }
-
-}
-
-// ===============================================================
-// ===============================================================
-// SECTION HÉBERGEMENT
-// ===============================================================
-// ===============================================================
-
-
-
-#section_hebergement>div {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 20px;
-}
-
-#section_hebergement>div>div {
-    cursor: pointer;
-}
-
-.hebergement_img {
-    // background-color: red;
-    height: 230px;
-    width: 100%;
-    background-position: center;
-    background-size: cover;
-    transition: box-shadow 0.2s;
-
-}
-
-#suite .hebergement_img {
-    background-image: url("../images/hebergements/suite.jpg");
-    box-shadow: inset 0 -5px 0 $color_turquoise;
-
-
-}
-
-#lodge .hebergement_img {
-    background-image: url("../images/hebergements/lodge.jpg");
-    box-shadow: inset 0 0px 0 $color_turquoise;
-
-
-}
-
-#villa .hebergement_img {
-    background-image: url("../images/hebergements/villa.jpg");
-    box-shadow: inset 0 0px 0 $color_turquoise;
-
-
-}
-
-#suite:hover>.hebergement_img,
-#lodge:hover>.hebergement_img,
-#villa:hover>.hebergement_img {
-    box-shadow: inset 0 -5px 0 $color_turquoise !important;
-}
-
-#section_hebergement {
-    h3 {
-        padding-top: 12px;
-        padding-bottom: 3px;
-        font-weight: 700;
-        font-size: 17px;
-    }
-
-    p {
-        padding-bottom: 15px;
-        font-weight: 600;
-        font-size: 13px;
-        color: $color_bleu2;
-    }
-}
-
-
-// ===============================================================
-// ===============================================================
-// SECTION OPTIONS
-// ===============================================================
-// ===============================================================
-
-
-#section_options {
-    display: grid;
-
-    p {
-        padding: 0;
-    }
-
-}
-
-#section_options>div {
-    height: 60px;
-    margin: 4px 0;
-    display: flex;
-    align-items: center;
-}
-
-.options_icon {
-    width: 4vw;
-    height: 4vw;
-    min-width: 30px;
-    min-height: 30px;
-    max-width: 60px;
-    max-height: 60px;
-    background-size: 60%;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-#options_icon_01 {
-    background-image: url('../images/icons/options/option_01.png')
-}
-
-#options_icon_02 {
-    background-image: url('../images/icons/options/option_02.png')
-}
-
-#options_icon_03 {
-    background-image: url('../images/icons/options/option_03.png')
-}
-
-#options_icon_04 {
-    background-image: url('../images/icons/options/option_04.png')
-}
-
-
-
-
-.options_texte {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin-left: 20px;
-    width: 60%;
-    // height: 100%;
-}
-
-.options_texte h3 {
-    padding-bottom: 4px;
-    padding-top: 0px;
-    font-size: 15px;
-    color: #444;
-    font-weight: 600;
-}
-
-.options_texte p {
-    font-size: 13px;
-    color: $color_bleu2;
-    font-weight: 600;
-    background-color: white;
-}
-
-
-.leToggle {
-    width: 20%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-}
-
-
-// ===============================================================
-// ===============================================================
-// SECTION FINALISATION
-// ===============================================================
-// ===============================================================
-#section_finalisation {
-    input[type=text] {
-        &:focus {
-            border-bottom: 2px solid $color_turquoise;
-        }
-    }
-
-    label {
-        color: $color_turquoise;
-    }
-
-    #total {
-        margin-top: 20px;
-        display: flex;
-        flex-direction: column;
-        font-weight: 600;
-        width: 100%;
-
-        p {
-            color: #999;
-            font-size: 11px;
-        }
-
-        h4 {
-            border-radius: 2px;
-            border: 1px solid $color_turquoise;
-            color: $color_turquoise;
-            background-color: #EEFFF9;
-            padding: 13px 20px;
-            width: 70%;
-            font-size: 18px;
-            text-align: center;
-        }
-
-        >div:first-child {
-            display: flex;
-
-            p:first-child {
-                margin-right: 10px;
-                color: $color_turquoise;
-                font-size: 13px;
-                margin-bottom: 5px;
-            }
-        }
-    }
-
-    >div:last-child {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: flex-start;
-
-    }
-
-    .bouton {
-        margin: 0;
-        margin-top: 20px;
-        padding: 14px 18px !important;
-        font-size: 15px;
-        font-weight: 600;
-    }
-
-    .bouton i {
-        font-size: 15px;
-        display: inline-block;
-        padding-left: 15px;
-    }
-}
-
-
-
-// ===============================================================
-// ===============================================================
-// MEDIA QUERIES MOBILE FIRST
-// ===============================================================
-// ===============================================================
-
 
 @media screen and (min-width: $breakpoint_mobile) {
-
-
-    #section_hebergement>div {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 20px;
-    }
-
-    #section_finalisation {
-        #total {
-            >div:first-child {
-                display: flex;
-                // flex-direction: column;
-
-                p:first-child {
-                    margin-right: 10px;
-                    color: $color_turquoise;
-                    font-size: 13px;
-                    margin-bottom: 5px;
-                }
-            }
-        }
-
-        >div:last-child {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: flex-end;
-
-        }
-
-        .bouton {
-            margin: 0px;
-        }
-    }
+#titreConfirmation {
+	font-size: 30px;
+	font-weight:800;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 70px;
+}
 }
 
 
-@media screen and (min-width: $breakpoint_bureau) {
+// ====================================
 
-    #bodyPaiementRetour {
-        top: 60px;
-    }
 
-    #main_paiement {
-        width: 85%;
-        // padding: 120px 0 40px 0;
-        margin: 0 auto;
-        display: grid;
-        grid-gap: 50px;
-    padding: 12vw 0 40px 0;
+.check_mark {
+  width: 80px;
+  height: 130px;
+  margin: 0 auto;
+  margin-top: 90px;
+  margin-bottom: -100px;
+}
 
-        grid-template-areas: "infos hebergement"
-            "services  finalisation";
-    }
+button {
+  cursor: pointer;
+  margin-left: 15px;
+}
 
+.hide{
+  display:none;
+}
+
+.sa-icon {
+  width: 80px;
+  height: 80px;
+  border: 4px solid gray;
+  -webkit-border-radius: 40px;
+  border-radius: 40px;
+  border-radius: 50%;
+  margin: 20px auto;
+  padding: 0;
+  position: relative;
+  box-sizing: content-box;
+}
+
+.sa-icon.sa-success {
+  border-color: #4CAF50;
+}
+
+.sa-icon.sa-success::before, .sa-icon.sa-success::after {
+  content: '';
+  -webkit-border-radius: 40px;
+  border-radius: 40px;
+  border-radius: 50%;
+  position: absolute;
+  width: 60px;
+  height: 120px;
+  background: white;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.sa-icon.sa-success::before {
+  -webkit-border-radius: 120px 0 0 120px;
+  border-radius: 120px 0 0 120px;
+  top: -7px;
+  left: -33px;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform-origin: 60px 60px;
+  transform-origin: 60px 60px;
+}
+
+.sa-icon.sa-success::after {
+  -webkit-border-radius: 0 120px 120px 0;
+  border-radius: 0 120px 120px 0;
+  top: -11px;
+  left: 30px;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform-origin: 0px 60px;
+  transform-origin: 0px 60px;
+}
+
+.sa-icon.sa-success .sa-placeholder {
+  width: 80px;
+  height: 80px;
+  border: 4px solid rgba(76, 175, 80, .5);
+  -webkit-border-radius: 40px;
+  border-radius: 40px;
+  border-radius: 50%;
+  box-sizing: content-box;
+  position: absolute;
+  left: -4px;
+  top: -4px;
+  z-index: 2;
+}
+
+.sa-icon.sa-success .sa-fix {
+  width: 5px;
+  height: 90px;
+  background-color: white;
+  position: absolute;
+  left: 28px;
+  top: 8px;
+  z-index: 1;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.sa-icon.sa-success.animate::after {
+  -webkit-animation: rotatePlaceholder 4.25s ease-in;
+  animation: rotatePlaceholder 4.25s ease-in;
+  animation-delay: 1.5s;
+}
+
+.sa-icon.sa-success {
+  border-color: transparent\9;
+}
+.sa-icon.sa-success .sa-line.sa-tip {
+  -ms-transform: rotate(45deg) \9;
+}
+.sa-icon.sa-success .sa-line.sa-long {
+  -ms-transform: rotate(-45deg) \9;
+}
+
+.animateSuccessTip {
+  -webkit-animation: animateSuccessTip 0.75s;
+  animation: animateSuccessTip 0.75s;
+  animation-delay: 1.5s;
+}
+
+.animateSuccessLong {
+  -webkit-animation: animateSuccessLong 0.75s;
+  animation: animateSuccessLong 0.75s;
+  animation-delay: 1.5s;
+}
+
+@-webkit-keyframes animateSuccessLong {
+  0% {
+    width: 0;
+    right: 46px;
+    top: 54px;
+  }
+  65% {
+    width: 0;
+    right: 46px;
+    top: 54px;
+  }
+  84% {
+    width: 55px;
+    right: 0px;
+    top: 35px;
+  }
+  100% {
+    width: 47px;
+    right: 8px;
+    top: 38px;
+  }
+}
+@-webkit-keyframes animateSuccessTip {
+  0% {
+    width: 0;
+    left: 1px;
+    top: 19px;
+  }
+  54% {
+    width: 0;
+    left: 1px;
+    top: 19px;
+  }
+  70% {
+    width: 50px;
+    left: -8px;
+    top: 37px;
+  }
+  84% {
+    width: 17px;
+    left: 21px;
+    top: 48px;
+  }
+  100% {
+    width: 25px;
+    left: 14px;
+    top: 45px;
+  }
+}
+@keyframes animateSuccessTip {
+  0% {
+    width: 0;
+    left: 1px;
+    top: 19px;
+  }
+  54% {
+    width: 0;
+    left: 1px;
+    top: 19px;
+  }
+  70% {
+    width: 50px;
+    left: -8px;
+    top: 37px;
+  }
+  84% {
+    width: 17px;
+    left: 21px;
+    top: 48px;
+  }
+  100% {
+    width: 25px;
+    left: 14px;
+    top: 45px;
+  }
+}
+
+@keyframes animateSuccessLong {
+  0% {
+    width: 0;
+    right: 46px;
+    top: 54px;
+  }
+  65% {
+    width: 0;
+    right: 46px;
+    top: 54px;
+  }
+  84% {
+    width: 55px;
+    right: 0px;
+    top: 35px;
+  }
+  100% {
+    width: 47px;
+    right: 8px;
+    top: 38px;
+  }
+}
+
+.sa-icon.sa-success .sa-line {
+  height: 5px;
+  background-color: #4CAF50;
+  display: block;
+  border-radius: 2px;
+  position: absolute;
+  z-index: 2;
+}
+
+.sa-icon.sa-success .sa-line.sa-tip {
+  width: 25px;
+  left: 14px;
+  top: 46px;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.sa-icon.sa-success .sa-line.sa-long {
+  width: 47px;
+  right: 8px;
+  top: 38px;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+@-webkit-keyframes rotatePlaceholder {
+  0% {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+  5% {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+  12% {
+    transform: rotate(-405deg);
+    -webkit-transform: rotate(-405deg);
+  }
+  100% {
+    transform: rotate(-405deg);
+    -webkit-transform: rotate(-405deg);
+  }
+}
+@keyframes rotatePlaceholder {
+  0% {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+  5% {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+  12% {
+    transform: rotate(-405deg);
+    -webkit-transform: rotate(-405deg);
+  }
+  100% {
+    transform: rotate(-405deg);
+    -webkit-transform: rotate(-405deg);
+  }
 }
