--- a/scss/layout/accueil.scss
+++ b/scss/layout/accueil.scss
@@ -71,8 +71,13 @@
     border-top: 1px solid white;
 }
 
-#bodyAccueil #logo {
+#bodyAccueil 
+{#logo {
     width: 150px;
+}
+main {
+    display: none;
+}
 }
 
 #infos {
