--- a/css/main.css
+++ b/css/main.css
@@ -476,6 +476,17 @@ a {
   z-index: 10;
   margin-top: -8vh; }
 
+#btnCredits {
+  position: absolute;
+  bottom: 3px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 11px;
+  color: #aaa;
+  text-decoration: none; }
+
 #fondBlanc {
   width: 100vw;
   height: 200vh;
